--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,15 @@
 
 .app-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.section{
+  margin: 32px 0;
 }
